--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -26,7 +26,6 @@ body {
    grid-template-columns: auto;
    grid-auto-rows: minmax(100px, auto);
    grid-gap: 10px;
-   border: 10px solid #ff5e62;
    background-color: white;
    z-index: 900;
    position: relative;
